--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev":"nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "mongoose": "^6.4.7",
     "morgan": "~1.9.1",
